@@ -1,5 +1,8 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.368 2005/11/07 18:58:06 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.369 2005/11/07 19:34:20 rocket Exp $
+
+  07 Nov 2005; Eric Edgar <rocket@gentoo.org> targets/support/create-iso.sh:
+  Output mkisofs command line options to assist in debugging
 
   07 Nov 2005; Eric Edgar <rocket@gentoo.org>
   modules/generic_stage_target.py, targets/support/create-iso.sh:
